# realway

./: .gitignore  Develop_Note.md  Dockerfile  README.md  Study_Note.md  config.ini  docker-compose.yml  pyproject.toml  requirements.txt  sample.json  test.py
flask/: app.py
realway/: app.py  export_to_mongo.py  fetcher.py  get_api_data.py  logger.py  main.py  model.py  show_mongo_data.py  test.py
realway/config/: __init__.py  config.toml
realway/templates/: 404.html  base.html  echart_sample.html  element_sample.html  index.html  table.html
tests/: test_config.py  test_project_config.py  test_realway.py  test_request_url.py
tests/locust/: locustfile.py
